--- a/Dockerfile.example
+++ b/Dockerfile.example
@@ -13,7 +13,9 @@ RUN \
   apt-get install libldap2-dev -y && \
   rm -rf /var/lib/apt/lists/* && \
   docker-php-ext-configure ldap --with-libdir=lib/x86_64-linux-gnu/ && \
-  docker-php-ext-install ldap
+  docker-php-ext-install ldap && \
+  docker-php-ext-install php-gd && \
+  docker-php-ext-install php-exif
 RUN composer self-update --no-progress && \
     composer install --no-progress
 
