--- a/Dockerfile.example
+++ b/Dockerfile.example
@@ -13,9 +13,17 @@ RUN \
   apt-get install libldap2-dev -y && \
   rm -rf /var/lib/apt/lists/* && \
   docker-php-ext-configure ldap --with-libdir=lib/x86_64-linux-gnu/ && \
-  docker-php-ext-install ldap && \
-  docker-php-ext-install php-gd && \
-  docker-php-ext-install php-exif
+  docker-php-ext-install ldap \
+  && rm -rf /var/lib/apt/lists/* && rm -rf /tmp/*
+  
+# GD
+RUN apt-get update && \
+  apt-get install -y libfreetype6-dev libjpeg62-turbo-dev libpng12-dev --no-install-recommends \
+  && docker-php-ext-configure gd --with-freetype-dir=/usr/include/ --with-jpeg-dir=/usr/include/ \
+  && docker-php-ext-install gd \
+  && docker-php-ext-install exif \
+  && rm -rf /var/lib/apt/lists/* && rm -rf /tmp/*
+  
 RUN composer self-update --no-progress && \
     composer install --no-progress
 
